# financial-ai-copilot

./: .gitignore  Dockerfile  README.md  chatbot_mcp.py  data_ingestion.py  docker-compose.yml  fast.py  mcp_server_activate.bat  prompts.py  pyproject.toml  web_data_ingestion.py
data/: data.json  stocks_metadata.json
